# Multi-Agent-Research-Paper-Analyzer

./: README.md
API/: .gitignore  FRONTEND.PY  agents.py  main.py  pyproject.toml
API/agents/: Youtube_tool.py  experiment_agent.py  math_agent.py  parser_agent.py  teach_agent.py
API/routes/: agent_analyze.py  upload_file.py
API/services/: Structured_output.py  agent_pipeline.py  clean_text.py  context_manager.py  vectore_store.py
API/tools/: MultiStep_Reasoning.py  retriever_tool.py
API/utils/: response_cleaners.py
NoteBooks/: 2_langgraph_Architecture.ipynb  Agent_Architecture.ipynb
NoteBooks/.ipynb_checkpoints/: 2_langgraph_Architecture-checkpoint.ipynb  Agent_Architecture-checkpoint.ipynb
docs/: Agent_Architecture.html
